desativar usuario ok + correcoes listas e cads

--- a/src/main/resources/templates/cadastro/cadastroUsuario.html
+++ b/src/main/resources/templates/cadastro/cadastroUsuario.html
@@ -54,7 +54,7 @@
         <input type="hidden" name="userId" th:value="${users?.userId}" />
 
         <div class="mb-3">
-          <label class="form-label">Nome:</label>
+          <label class="form-label">Nome</label>
           <input
             type="text"
             name="nome"
@@ -64,7 +64,7 @@
           />
         </div>
         <div class="mb-3">
-          <label class="form-label">Nif:</label>
+          <label class="form-label">NIF</label>
           <input
             type="text"
             name="nif"
@@ -74,7 +74,7 @@
           />
         </div>
         <div class="mb-3">
-          <label class="form-label">Senha:</label>
+          <label class="form-label">Senha</label>
           <input
             type="password"
             name="senha"
@@ -84,7 +84,7 @@
           />
         </div>
         <div class="mb-3">
-          <label class="form-label">Qual o Acesso da Pessoa ?</label>
+          <label class="form-label">Tipo de Usuário</label>
           <select name="tipo" class="form-select" required>
             <option value="" disabled selected>Selecione uma Opção:</option>
             <option
