--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -24,7 +24,7 @@
 				<th>Tipo</th>
 				<th>Alterar</th>
 				<th>Redifina Senha</th>
-				<th>Excluir</th>
+				<th>Desativar Usuario</th>
 
 			</tr>
 
@@ -43,7 +43,7 @@
 						class="material-icons">##</i>
 				</a></td>		
 						
-				<td><a th:href="@{/excluir(userId=${user.userId})}"> <i
+				<td><a th:href="@{/desativar(userId=${user.userId})}"> <i
 						class="material-icons">delete_forever</i>
 				</a></td>
 
