--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -45,7 +45,7 @@
     <title>Lista Resposta</title>
   </head>
   <body>
-    <h1>Lista de Respostas</h1>
+    <h1 style="text-align:center">Lista de Respostas</h1>
       <section  class="slc">
         <h2></h2>
         
