--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -46,6 +46,7 @@
   </head>
   <body>
     <h1>Lista de Respostas</h1>
+    <input th:value="${contagem}" disabled>
       <section  class="slc">
         <h2></h2>
         
