contagem de respostas

--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -46,6 +46,8 @@
   </head>
   <body>
     <h1 style="text-align:center">Lista de Respostas</h1>
+    <h4>Avaliações computadas</h4>
+    <input th:value="${contagem}" disabled>
       <section  class="slc">
         <h2></h2>
         
