--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -12,24 +12,26 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 		<!-- CSS only -->
+		
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 		<title>Lista de Usuario</title>
 	  </head>
 	  <body>
 	
 		
-		<nav class="navbar navbar-dark bg-dark fixed-top">
+		<nav class="navbar navbar-dark  fixed-top">
 			<div class="container-fluid">
-			  <a class="navbar-brand" href="#">Lista de Pesquisa</a>
+				
+				<div>
+					<img class="Logo_kaos "src="../img/Logo_KAOS.png" alt="">
+				  </div>
+				  
+			  <p class="navbar-brand" style="color: white; font-size:xx-large;" >Lista de Usuário</p>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
 				<span class="navbar-toggler-icon"></span>Menu
 			  </button>
 			  <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-				<div class="offcanvas-header">
-				  <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Pesquise</h5>
-				  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-				</div>
-		
+			
 				  <form  class="d-flex form-pesquisa" role="search">
 					<input  class="form-control me-2" type="search" name="id"  aria-label="Search" id="input-busca">
 					<button class="btn btn-outline-success" type="submit">Pesquisar</button>
@@ -39,28 +41,17 @@
 			</div>
 		  </nav>
 			
-		
+
 		<h1>Lista de Usuários</h1>
 
-		<div class="dropend">
-			<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-			  Pesquise
-			</button>
-			<ul class="dropdown-menu">
-				<form class="d-flex form-pesquisa" role="search">
-					<input name="Funcionario" class="form-control me-2" type="search"  aria-label="Search" id="input-busca">
-					<button class="btn btn-outline-success" type="submit">Pesquisar</button>
-				  </form>
-			</ul>
-		  </div>
 
 
-		<table id="customers">
+		<table class="table">
 			
 		<thead>
 		  <tr>
 			<th class="id">ID</th>
-			<th>Nome</th>
+			<th class="th-height">Nome</th>
 			<th class="th-height">NIF</th>
 			<th class="th-height">Tipo</th>
 			<th class="th-height">Alterar</th>
@@ -68,8 +59,8 @@
 			
 		  </tr>
 		</thead>
-		<tbody id="tb-user">
-			<tr th:each="user:${usuario}">
+		<tbody id="tb-user" class="table-group-divider" >
+			<tr th:each="user:${usuario}" scope="row">
 
 				<td th:text="${user.userId}" />
 				<td th:text="${user.nome}" />
@@ -92,10 +83,19 @@
 			<ul class="pagination">
 			  <li class="page-item" th:class="${pagAtual == 1 ? 'disabled' : 'waves-effect' }"><a class="page-link" th:href="${pagAtual > 1 ? pagAtual - 1 : '#' }">Anterior</a></li>
 			  <li class="page-item" th:class="${pagAtual == p ? 'active purple' : 'waves-effect'}" th:each="p:${numPag}"><a class="page-link" th:href="${p}"><span th:text="${p}"></span></a></li>
+			  
 			  <li class="page-item" th:class="${pagAtual == totalPages ? 'disabled' : 'waves-effect'}"><a class="page-link" th:href="${pagAtual < totalPages ? pagAtual + 1 : '#'}">Próximo</a></li>
 			</ul>
 		  </nav>
 
+		  <div class="card text-center">
+
+			<div class="card-body ">
+				<img class="kaos "src="../img/android-chrome-512x512.png" alt="">
+			  <p class="card-text">By from KAOS</p>
+			</div>
+
+		  </div>
 	
 		<!-- JavaScript Bundle with Popper -->
 
