--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -36,6 +36,7 @@
             type="text"
             placeholder="NIF"
             class="validate"
+            name="nif"
             id="login"
             required
           /><br />
@@ -43,11 +44,12 @@
             type="password"
             placeholder="••••••••••••••"
             class="password validate"
+            name="senha"
             id="senha"
           /><br />
 
           <div class="btnCad">
-            <button class="btn-login"> Logar </button>
+            <button class="btn-login" type="submit"> Logar </button>
           </div>
 
 
