--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="../../css/listas/lista.css" />  
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<!-- CSS only -->
 		
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -55,7 +56,8 @@
 			<th class="th-height">NIF</th>
 			<th class="th-height">Tipo</th>
 			<th class="th-height">Alterar</th>
-			<th class="th-height">Excluir</th>
+			<th class="th-height">Resetar Senha</th>
+			<th class="th-height">Desativar Usuario</th>
 			
 		  </tr>
 		</thead>
@@ -69,13 +71,12 @@
 
 				<td><a th:href="@{/alterar(userId=${user.userId})}"><i
 						class="material-icons">create</i> </a></td>
+
 				<td><a th:href="@{/reseta(userId=${user.userId})}"> <i
-						class="material-icons">##</i>
-				</a></td>		
+      					class="material-icons">autorenew</i></a></td> 		
 						
 				<td><a th:href="@{/desativar(userId=${user.userId})}"> <i
-						class="material-icons">delete_forever</i>
-				</a></td>
+					class="material-icons">delete_forever</i></a></td>
 
 			</tr>
 
@@ -95,14 +96,13 @@
 
 			<div class="card-body ">
 				<img class="kaos "src="../img/android-chrome-512x512.png" alt="">
-			  <p class="card-text">By from KAOS</p>
+			  <p class="card-text">By KAOS</p>
 			</div>
 
 		  </div>
 	
 		<!-- JavaScript Bundle with Popper -->
 
-		<script src="../../js/buscas/fetch.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 	  </body>
 	</html>
