--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -30,7 +30,7 @@
             <form class="cadForm col s12" action="login" method="post">
                 <h4 class="msg">Bem-vindo!</h4>
 
-                <div th:replace="fragments/mensagemLogin"></div>
+                <div th:replace="fragments/mensagem"></div>
 
                 <div class="form">
                     <input
