--- a/src/main/resources/templates/cadastro/cadastroUsuario.html
+++ b/src/main/resources/templates/cadastro/cadastroUsuario.html
@@ -1,41 +1,41 @@
 <html xmlns:th="http://thymeleaf.org">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- Favicon -->
     <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="../img/apple-touch-icon.png"
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="../img/apple-touch-icon.png"
     />
     <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="../img/favicon-32x32.png"
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="../img/favicon-32x32.png"
     />
     <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="../img/favicon-16x16.png"
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="../img/favicon-16x16.png"
     />
-    <link rel="stylesheet" href="../../css/pesquisa/pesquisa.css" />
+    <link rel="stylesheet" href="../../css/pesquisa/pesquisa.css"/>
     <!-- CSS only -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+            crossorigin="anonymous"
     />
     <!-- Compiled and minified CSS -->
 
-    <title>Cadastro de Usuários</title>
-  </head>
-  <body>
-    <div class="area">
-      <ul class="circles">
+    <title>Cadastro de Usuário</title>
+</head>
+<body>
+<div class="area">
+    <ul class="circles">
         <li></li>
         <li></li>
         <li></li>
@@ -46,65 +46,79 @@
         <li></li>
         <li></li>
         <li></li>
-      </ul>
-    </div>
-    <div class="container main-div">
-      <form action="save" method="post" class="cadForm col s12">
+    </ul>
+</div>
+<div class="container main-div">
+    <form action="save" method="post" class="cadForm col s12">
         <h4>Cadastro de Usuários</h4>
-        <input type="hidden" name="userId" th:value="${users?.userId}" />
+        <input type="hidden" name="userId" th:value="${users?.userId}"/>
+
+        <div th:replace="fragments/mensagem"/>
 
         <div class="mb-3">
-          <label class="form-label">Nome</label>
-          <input
-            type="text"
-            name="nome"
-            th:value="${users?.nome}"
-            class="form-control"
-            required
-          />
+            <label class="form-label">Nome</label>
+            <input
+                    type="text"
+                    name="nome"
+                    th:value="${users?.nome}"
+                    class="form-control"
+                    required
+            />
         </div>
         <div class="mb-3">
-          <label class="form-label">NIF</label>
-          <input
-            type="text"
-            name="nif"
-            th:value="${users?.nif}"
-            class="form-control"
-            required
-          />
+            <label class="form-label">NIF</label>
+            <input
+                    name="nif"
+                    th:value="${users?.nif}"
+                    class="form-control"
+                    required
+
+                    oninput="javascript: if (this.value.length > this.maxLength)
+                    this.value = this.value.slice(0, this.maxLength);"
+                    type = "number"
+                    maxlength = "10"
+            />
         </div>
         <div class="mb-3">
-          <label class="form-label">Senha</label>
-          <input
-            type="password"
-            name="senha"
-            th:value="${users?.senha}"
-            class="form-control"
-            required
-          />
+            <label class="form-label">Senha</label>
+            <input
+                    type="password"
+                    name="senha"
+                    th:value="${users?.senha}"
+                    class="form-control"
+                    required
+            />
         </div>
         <div class="mb-3">
-          <label class="form-label">Tipo de Usuário</label>
-          <select name="tipo" class="form-select" required>
-            <option value="" disabled selected>Selecione uma Opção:</option>
-            <option
-              th:each="tipo : ${T(br.com.projeto.sistemadeavaliacao.model.TipoUsuario).values()}"
-              th:value="${tipo}"
-              th:text="${tipo}"
-              th:selected="${tipo.toString() == r?.tipo?.toString()}"
-            ></option>
-          </select>
+            <label class="form-label">Tipo de Usuário</label>
+            <select name="tipo" class="form-select" required>
+                <option value="" disabled selected>Selecione uma Opção:</option>
+                <option
+                        th:each="tipo : ${T(br.com.projeto.sistemadeavaliacao.model.TipoUsuario).values()}"
+                        th:value="${tipo}"
+                        th:text="${tipo}"
+                        th:selected="${tipo.toString() == r?.tipo?.toString()}"
+                ></option>
+            </select>
         </div>
 
         <div class="mb-3">
-          <button type="submit" class="btn btn-primary btnCad">Cadastrar</button>
+            <button type="submit" class="btn btn-primary btnCad">Cadastrar</button>
         </div>
-      </form>
-    </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    </form>
+</div>
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"/>
+
+</script>
+<style>
+    input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+</style>
+</body>
 </html>
