--- a/src/main/resources/templates/util/Model.html
+++ b/src/main/resources/templates/util/Model.html
@@ -1,52 +1,92 @@
 <html xmlns:th="http://thymeleaf.org">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../../css/modal/modal.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+  </head>
 
-<head>
- 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
+  <body>
+    <div class="container">
+      <h2>Altere sua senha [[${usuario.nome}]]</h2>
+      <!-- Trigger the modal with a button -->
+      <button
+        type="button"
+        class="btn btn-info btn-lg"
+        data-toggle="modal"
+        data-target="#myModal"
+      >
+        Click para alterar senha
+      </button>
 
-<div class="container">
-  <h2>Altere sua senha [[${usuario.nome}]]</h2>
-  <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Click para alterar senha</button>
-
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-    
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          
-        </div>
-        <div class="modal-body">
-        
-						        <form action="alteraSenha" method="post">
-						        <input type="hidden" name="userId" th:value="${usuario?.userId}" >
-						        <input type="password" name="senha" required>
-						       	<input type="submit" class="button" >
-						        </form>
-						        
-        
-          <p>--------------------------------------</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <!-- Modal -->
+      <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog">
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">
+                &times;
+              </button>
+            </div>
+            <div class="modal-body">
+              <form
+                action="alteraSenha"
+                method="post"
+                class="form col-md-12 center-block"
+              >
+                <input
+                  type="hidden"
+                  name="userId"
+                  th:value="${usuario?.userId}"
+                />
+                <div class="form-group" id="input">
+                  <img
+                    src="../../img/visibility.png"
+                    id="olho"
+                    class="olho"
+                  />
+                  <input
+                    type="password"
+                    name="senha"
+                    placeholder="Nova Senha"
+                    class="form-control input-lg"
+                    id="pass"
+                    required
+                  />
+                </div>
+                <div class="form-group">
+                  <button
+                    class="btn btn-primary btn-lg btn-block"
+                    type="submit"
+                  >
+                    Enviar
+                  </button>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-default"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+            </div>
+          </div>
         </div>
       </div>
-      
     </div>
-  </div>
-  
-  
-  
-</div>
-
-</body>
+    <script src="../../js/modal/modal.js"></script>
+  </body>
 </html>
