"visualizar senha ou não"

--- a/src/main/resources/templates/util/Model.html
+++ b/src/main/resources/templates/util/Model.html
@@ -17,8 +17,9 @@
 
   <body>
     <div class="container">
+      <!-- [[${usuario.nome}]] metodo  -->
       <h2>Altere sua senha [[${usuario.nome}]]</h2>
-      <!-- Trigger the modal with a button -->
+      
       <button
         type="button"
         class="btn btn-info btn-lg"
