--- a/src/main/resources/templates/util/Model.html
+++ b/src/main/resources/templates/util/Model.html
@@ -9,17 +9,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../../css/modal/modal.css" />
+    <link rel="stylesheet" href="../../css/modal/fundo.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
+    <title>Alterar Senha</title>
   </head>
 
   <body>
     <div class="container">
       <!-- [[${usuario.nome}]] metodo  -->
       <h2>Altere sua senha [[${usuario.nome}]]</h2>
-      
+
       <button
         type="button"
         class="btn btn-info btn-lg"
@@ -28,14 +30,20 @@
       >
         Click para alterar senha
       </button>
-
+    </div>
       <!-- Modal -->
       <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
         <div class="modal-dialog">
           <!-- Modal content-->
           <div class="modal-content">
             <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                data-toggle="modal"
+                data-target="#myModal"
+              >
                 &times;
               </button>
             </div>
@@ -51,11 +59,7 @@
                   th:value="${usuario?.userId}"
                 />
                 <div class="form-group" id="input">
-                  <img
-                    src="../../img/visibility.png"
-                    id="olho"
-                    class="olho"
-                  />
+                  <img src="../../img/visibility.png" id="olho" class="olho" />
                   <input
                     type="password"
                     name="senha"
@@ -63,6 +67,7 @@
                     class="form-control input-lg"
                     id="pass"
                     required
+                    maxlength="20"
                   />
                 </div>
                 <div class="form-group">
@@ -87,7 +92,7 @@
           </div>
         </div>
       </div>
-    </div>
+    
     <script src="../../js/modal/modal.js"></script>
   </body>
 </html>
