--- a/src/main/resources/templates/curso/curso.html
+++ b/src/main/resources/templates/curso/curso.html
@@ -48,6 +48,7 @@
 			  th:value="${cs?.descCurso}"
 			  class="form-control"
 			  id="nome-curso"
+			  style="text-transform:uppercase"
 			/>
 		  </div>
       
