--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -40,6 +40,7 @@
                             placeholder="NIF"
                             class="validate"
                             id="login"
+                            style="text-transform:uppercase"
                             required
                     /><br/>
                     <input
@@ -49,6 +50,7 @@
                             placeholder="••••••••••••••"
                             class="password validate"
                             id="senha"
+                            style="text-transform:uppercase"
                             required
                     /><br/>
                     <div class="btnCad">
