--- a/src/main/resources/templates/pergunta/cadPergunta.html
+++ b/src/main/resources/templates/pergunta/cadPergunta.html
@@ -51,7 +51,9 @@
 			<div class="mb-3">
 				<label class="lb-legend">Nova Pergunta</label>
 				<input type="text" class="form-control ipt-pergunta"
-					name="textoPergunta" th:value="${p?.textoPergunta}" required />
+					name="textoPergunta" th:value="${p?.textoPergunta}"
+					style="text-transform:uppercase"
+					 required />
 				
 			</div>
 
