--- a/src/main/resources/templates/pesquisa/cadPesquisa.html
+++ b/src/main/resources/templates/pesquisa/cadPesquisa.html
@@ -53,7 +53,8 @@
 			<div class="mb-3">
 				<label class="form-label">Turma</label> <input type="text"
 					class="form-control" name="turma"
-					placeholder="exemplo: Dev Noite 1200hs periodo: Noturno" required />
+					placeholder="exemplo: Dev Noite 1200hs periodo: Noturno" required
+					style="text-transform:uppercase" />
 			</div>
 
 			<!-- Docentes -->
