--- a/src/main/resources/templates/resposta/codigoPesquisa.html
+++ b/src/main/resources/templates/resposta/codigoPesquisa.html
@@ -18,7 +18,9 @@
             <form action="/resposta/buscar">
                 <div class="inbt">
                     <h2>Digite o código do formulário</h2>
-                    <input type="number" name="id"  value="" style="text-align:center" required> 
+                    <input type="number" name="id"  value="" style="text-align:center"
+                    style="text-transform:uppercase"
+                     required> 
                     
                     <button class="bt" >
                         <a  type="submit">Buscar</a>
