--- a/src/main/resources/templates/util/Model.html
+++ b/src/main/resources/templates/util/Model.html
@@ -6,6 +6,8 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
+    
+    <link rel="stylesheet" href="../../css/modal/fundo.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../../css/modal/modal.css" />
@@ -18,80 +20,92 @@
   </head>
 
   <body>
-    <div class="container">
-      <!-- [[${usuario.nome}]] metodo  -->
-      <h2>Altere sua senha [[${usuario.nome}]]</h2>
-
-      <button
-        type="button"
-        class="btn btn-info btn-lg"
-        data-toggle="modal"
-        data-target="#myModal"
-      >
-        Click para alterar senha
-      </button>
-    </div>
-      <!-- Modal -->
-      <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
-        <div class="modal-dialog">
-          <!-- Modal content-->
-          <div class="modal-content">
-            <div class="modal-header">
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                data-toggle="modal"
-                data-target="#myModal"
-              >
-                &times;
-              </button>
-            </div>
-            <div class="modal-body">
-              <form
-                action="alteraSenha"
-                method="post"
-                class="form col-md-12 center-block"
-              >
-                <input
-                  type="hidden"
-                  name="userId"
-                  th:value="${usuario?.userId}"
-                />
-                <div class="form-group" id="input">
-                  <img src="../../img/visibility.png" id="olho" class="olho" />
+    <div class="area" >
+      <ul class="circles">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+      </ul>
+  </div >
+  
+    <div class="context">
+      <div class="container main-div">
+        <form>
+          <!-- [[${usuario.nome}]] metodo  -->
+          <h1 style="text-align: center">Altere sua senha [[${usuario.nome}]]</h1>
+  
+          <button
+            type="button"
+            class="btn btn-info btn-lg btn-mod"
+            data-toggle="modal"
+            data-target="#myModal"
+          >
+            Click para alterar senha
+          </button>
+        </form>
+  
+        <!-- Modal -->
+        <div class="modal" id="myModal" tabindex="-1" role="dialog" data-backdrop="static">
+          <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+              </div>
+              <div class="modal-body">
+                <form
+                  action="alteraSenha"
+                  method="post"
+                  class="form col-md-12 center-block"
+                >
                   <input
-                    type="password"
-                    name="senha"
-                    placeholder="Nova Senha"
-                    class="form-control input-lg"
-                    id="pass"
-                    required
-                    maxlength="20"
+                    type="hidden"
+                    name="userId"
+                    th:value="${usuario?.userId}"
                   />
-                </div>
-                <div class="form-group">
-                  <button
-                    class="btn btn-primary btn-lg btn-block"
-                    type="submit"
-                  >
-                    Enviar
-                  </button>
-                </div>
-              </form>
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-default"
-                data-dismiss="modal"
-              >
-                Close
-              </button>
+                  <div class="form-group" id="input">
+                    <img src="../../img/visibility.png" id="olho" class="olho" />
+                    <input
+                      type="password"
+                      name="senha"
+                      placeholder="Nova Senha"
+                      class="form-control input-lg"
+                      id="pass"
+                      required
+                      maxlength="20"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <button
+                      class="btn btn-primary btn-lg btn-block"
+                      type="submit"
+                    >
+                      Enviar
+                    </button>
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-info"
+                  data-dismiss="modal"
+                >
+                  Close
+                </button>
+              </div>
             </div>
           </div>
         </div>
       </div>
+  </div>
+
     
     <script src="../../js/modal/modal.js"></script>
   </body>
