--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -53,7 +53,7 @@
         
         <details th:each="li:${pesq.listaResposta}" id="minhaDiv" open>
           
-          <summary th:text="${li.id}"></summary>
+          <summary th:text="${li.ip}"></summary>
           <div>
           <table class="table" th:each="it:${li.listaItem}">
             <thead>
