justificativa em progresso

--- a/src/main/resources/templates/justificativa/justificativaItem.html
+++ b/src/main/resources/templates/justificativa/justificativaItem.html
@@ -12,7 +12,7 @@
     <input type="hidden" name="id"/>
     <div>
         id do item
-        <input type="text" name="itemResposta" th:value="${item?.id}" disabled/>
+        <input type="text" th:name="itemResposta.id" th:value="${item?.id}" />
     </div>
     <br>
 
