--- a/src/main/resources/templates/telainicial/telaInicialDiretor.html
+++ b/src/main/resources/templates/telainicial/telaInicialDiretor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Início Secretaria</title>
@@ -34,5 +34,28 @@
 			
 			<a href="https://app.powerbi.com/view?r=eyJrIjoiMDk3M2UwYmYtYzNiYi00YzgyLTg2ZjUtYTMwYWUwNmVkZTZhIiwidCI6ImIxMDUxYzRiLTNiOTQtNDFhYi05NDQxLWU3M2E3MjM0MmZkZCJ9" style="margin: 0 40px 0 60px" >Gerar Relatório</a>	
 		</div>
+
+	<table class="striped" border="1">
+		ULTIMAS JUSTIFICATIVAS RESPONDIDAS
+	    <thead>
+		<th>Data</th>
+	    <th>Pergunta</th>
+	    <th>Comentario</th>
+	    <th>Resposta Comentario</th>
+		<th>Docente</th>
+
+		</thead>
+
+	    <tbody>
+	    <tr th:each="j:${justItem}">
+			<td th:text="${#dates.format(j?.data, 'dd/MM/yyyy')}"/>
+			<td th:text="${j?.itemResposta?.pergunta?.textoPergunta}" />
+			<td th:text="${j?.itemResposta?.comentario}" />
+			<td th:text="${j?.texto}" />
+			<td th:text="${j?.usuario?.nome}" />
+		</tr>
+
+	    </tbody>
+	</table>
 </body>
 </html>
