--- a/src/main/resources/static/css/sections.css
+++ b/src/main/resources/static/css/sections.css
@@ -24,9 +24,10 @@ section {
 summary {
   display: block;
   cursor: pointer;
+  width: 150%;
   padding: 10px;
   font-family: "Space Mono", monospace;
-  font-size: 22px;
+  font-size: 19px;
   transition: .3s;
   border-bottom: 2px solid;
   user-select: none;
@@ -37,6 +38,7 @@ details > div {
   flex-wrap: wrap;
   overflow: auto;
   height: 100%;
+  width: 150%;
   user-select: none;
   padding: 0 20px;
   font-family: "Karla", sans-serif;
@@ -66,7 +68,7 @@ details[open] > summary {
 
   details[open] > div > img {
     opacity: 0;
-    height: 100%;
+    height: 00%;
     margin: 0;
     animation-name: showImage;
     animation-duration: 0.3s;
