--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -47,13 +47,14 @@
     <h1 style="text-align:center">Lista de Respostas</h1>
     <h4>Avaliações computadas</h4>
     <input th:value="${contagem}" disabled>
+    <div class="divsec">
       <section  class="slc">
         <h2></h2>
         
         <details th:each="li:${pesq.listaResposta}" id="minhaDiv" open>
           
           <summary th:text="${li.ip} + '|' + ${li.nomeMaquina} + '|' + ${li.dataRealizacao}"></summary>
-          <div >
+          <div class="divsec">
           <table class="table" th:each="it:${li.listaItem}">
             <thead>
               <th>Pergunta</th>
@@ -69,6 +70,7 @@
           </div>
         </details>
       </section>
+    </div>
     </div>
     <div>
     
