--- a/src/main/resources/templates/pesquisa/cadPesquisa.html
+++ b/src/main/resources/templates/pesquisa/cadPesquisa.html
@@ -26,7 +26,9 @@
 
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
+
 <title>Pesquisa</title>
+
 </head>
 
 <body>
@@ -48,7 +50,7 @@
 		<h1 style="text-align:center">Nova Pesquisa</h1>
 
 		<form method="post" action="novaPesquisa">
-			<input type="hidden" name="id" />
+			<input type="hidden" name="id" id="idpesq" />
 
 			<div class="mb-3">
 				<label class="form-label">Turma</label> <input type="text"
@@ -122,6 +124,11 @@
 		</form>
 	</div>
 
+    <script th:inline="javascript">window.addEventListener("load", () => {
+    const id = /*[[${idpesq}]]*/
+    if(id) return alert("Pesquisa criada com sucesso! Seu código é: " + id)
+    })
+    </script>
 
 	<!-- Script criados -->
 	<script src="../../js/selects/select.js"></script>
@@ -132,7 +139,7 @@
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
 		crossorigin="anonymous">
-		
+
 	</script>
 
 </body>
