--- a/src/main/resources/templates/resposta/pesquisaNaoExiste.html
+++ b/src/main/resources/templates/resposta/pesquisaNaoExiste.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <title>Title</title>
-</head>
-<body>
-<h1>ESSA PESQUISA NÃO EXISTE</h1>
+  </head>
+  <body onLoad="relogio()">
+    <div class="container-lg">
+      <h1 class="h1">ESSA PESQUISA NÃO EXISTE</h1>
+      <span id="spanRelogio" class="fs-1"></span>
+    </div>
+  </body>
 
-</body>
-<script>
-
-    setTimeout(() => {
-        window.location.href="/resposta/codigoPesquisa"
-    }, 2000);
-
-    // colocar os segundos na tela e falar que vai ser redirecionado
-
-    </script>
+  <script src="../../js/countdowm.js"></script>
+  <!-- JavaScript Bundle with Popper -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"
+  ></script>
 </html>
