--- a/src/main/resources/templates/curso/curso.html
+++ b/src/main/resources/templates/curso/curso.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     />
     
-    <title>Cadastro de Cursos</title>
+    <title>Cadastro de Curso</title>
   </head>
   <body>
     
