--- a/src/main/resources/templates/pergunta/cadPergunta.html
+++ b/src/main/resources/templates/pergunta/cadPergunta.html
@@ -23,7 +23,7 @@
 	  />
   
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
-	<title>Nova Pergunta</title>
+	<title>Cadastro de Pergunta</title>
 </head>
 
 <body>
