--- a/src/main/resources/templates/pesquisa/cadPesquisa.html
+++ b/src/main/resources/templates/pesquisa/cadPesquisa.html
@@ -27,7 +27,7 @@
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
 
-<title>Pesquisa</title>
+<title>Cadastro de Pesquisa</title>
 
 </head>
 
