--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -42,7 +42,7 @@
             crossorigin="anonymous"
     />
 
-    <title>Lista Resposta</title>
+    <title>Lista de Respostas</title>
 </head>
 <body>
 <h1 style="text-align:center">Lista de Respostas</h1>
