--- a/src/main/resources/templates/pesquisa/mediaecomentario.html
+++ b/src/main/resources/templates/pesquisa/mediaecomentario.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title>Listar Respotas</title>
+    <title>Médias e Comentários</title>
 </head>
 <body>
 
