--- a/src/main/resources/templates/resposta/codigoPesquisa.html
+++ b/src/main/resources/templates/resposta/codigoPesquisa.html
@@ -24,7 +24,7 @@
       href="../img/favicon-16x16.png"
     />
 
-    <title>Código do formulário</title>
+    <title>Código do Formulário</title>
   </head>
   <body>
     <div class="tudo">
