--- a/src/main/resources/templates/resposta/pesquisaNaoExiste.html
+++ b/src/main/resources/templates/resposta/pesquisaNaoExiste.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../../css/not-exist.css">
-    <title>Title</title>
+    <title>Pesquisa Não Existe</title>
   </head>
   <body onLoad="relogio()">
     <svg width="380px" height="500px" viewBox="0 0 837 1045" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
