--- a/src/main/resources/templates/resposta/sucesso.html
+++ b/src/main/resources/templates/resposta/sucesso.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
 
-    <title>Document</title>
+    <title>Sucesso</title>
 </head>
 <body>
     <h1>FORMULARIO PREENCHIDO COM SUCESSO!!!!</h1>
