--- a/src/main/resources/templates/telainicial/telaInicialDiretor.html
+++ b/src/main/resources/templates/telainicial/telaInicialDiretor.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" xmlns:th="http://thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Início Secretaria</title>
+<title>Início Diretoria</title>
 </head>
 
 <body>
