--- a/src/main/resources/templates/justificativa/justificativaResposta.html
+++ b/src/main/resources/templates/justificativa/justificativaResposta.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Justifica RESPOSTA</title>
+    <title>Justificativa</title>
 </head>
 <body>
 <h1>JUSTIFICATIVA RESPOSTA</h1>
