--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -33,7 +33,6 @@
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
     <link rel="stylesheet" href="../../css/sections.css"/>
-    <link rel="stylesheet" href="../../css/dpw.css"/>
 
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -55,11 +54,13 @@
 
         <summary th:text="${li.ip}"></summary>
         <div>
-            <table>
+            <table class="table">
                 <thead>
+                <tr>
                 <th>Comentario Geral</th>
                 <th th:if="${session.docenciaLogado}">Justifica</th>
-                <th th:if="${session.diretoriaLogado}">Solicita Justificativa</th>
+                <th></th>
+                <th th:if="${session.diretoriaLogado}">Justificativa</th>
                 </thead>
                 <tbody>
                 <td th:text="${li.comentarioGeral}"></td>
@@ -71,14 +72,17 @@
                 </tbody>
             </table>
 
-            <table class="table" th:each="it:${li.listaItem}">
+            <table class="table table-striped" th:each="it:${li.listaItem}">
                 <thead>
                 <th>Pergunta</th>
+                
                 <th>Satisfacao</th>
                 <th>Nivel Importancia</th>
                 <th>Comentário</th>
-                <th th:if="${session.docenciaLogado}">Jutifica</th>
                 <th th:if="${session.diretoriaLogado}">Solicita Justificativa</th>
+                <th></th>
+                <th th:if="${session.docenciaLogado}">Justifica</th>
+              
 
 
                 </thead>
@@ -87,10 +91,11 @@
                 <td th:text="${it.satisfacao}"></td>
                 <td th:text="${it.nivelImportancia}"></td>
                 <td th:text="${it.comentario}"></td>
+                <td><a th:href="@{/itemResposta/solicitaJustificativa(id=${it.id})}" th:if="${session.diretoriaLogado}"
+                  onclick="solicitaJust()" id="cor">Solicitar</a></td>
                 <td><a th:href="@{/itemResposta/justificativa(id=${it.id})}" th:if="${session.docenciaLogado}">Justificar</a>
                 </td>
-                <td><a th:href="@{/itemResposta/solicitaJustificativa(id=${it.id})}" th:if="${session.diretoriaLogado}"
-                       onclick="solicitaJust()" id="cor">Solicitar</a></td>
+                
 
 
                 </tbody>
@@ -116,8 +121,6 @@
 
 
 <!-- JavaScript Bundle with Popper -->
-<script src="../../js/liresp.js"></script>
-<script src="../../js/focus.js"></script>
 <script src="../../js/ip.js"></script>
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
