--- a/src/main/resources/templates/pesquisa/listaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/listaPesquisa.html
@@ -55,6 +55,7 @@
 				<th class="th-height">Turma</th>
 				<th class="th-height">Data Vencimento</th>
 				<th class="th-height">Jusitificativa</th>
+				<th class="th-height">--</th>
 				<th class="">Respostas</th>
 			</tr>
 		</thead>
@@ -66,7 +67,8 @@
 				<td th:text="${ps.curso?.descCurso}"/>
 				<td th:text="${ps.turma}"/>
 				<td th:text="${#dates.format(ps.dataVencimento, 'dd/MM/yyyy')}"></td>
-				<td th:text="${ps.justificativa}"/>
+				<td th:text="${ps.justificativa ? 'justificativa pendente, acesse a lista de respostas para responder' : 'nenhuma justificativa pendente'}"/>
+				<td th:style="${ps.justificativa} ? 'background-color: yellow' : 'background-color: blue'" />
 				<td><a th:href="@{/pesquisa/listarResposta(id=${ps.id})}">Lista de Respostas</a></td>
 
 
