--- a/src/main/resources/templates/telainicial/telaInicialDocencia.html
+++ b/src/main/resources/templates/telainicial/telaInicialDocencia.html
@@ -15,7 +15,7 @@
 	<!-- CSS only -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-	<title>Lista Pesquisa</title>
+	<title>Tela de Docencia</title>
 </head>
 <body>
 <nav>
@@ -42,7 +42,7 @@
 		<th class="th-height">Turma</th>
 		<th class="th-height">Data Vencimento</th>
 		<th class="th-height">Jusitificativa</th>
-
+		<th class="th-height">--</th>
 		<th class="">Respostas</th>
 	</tr>
 	</thead>
@@ -54,8 +54,8 @@
 		<td th:text="${ps.curso.descCurso}"/>
 		<td th:text="${ps.turma}"/>
 		<td th:text="${ps.dataVencimento}"/>
-		<td th:text="${ps.justificativa}"/>
-
+		<td th:text="${ps.justificativa ? 'justificativa pendente, acesse a lista de respostas para responder' : 'nenhuma justificativa pendente'}"/>
+		<td th:style="${ps.justificativa} ? 'background-color: yellow' : 'background-color: blue'" />
 		<td><a th:href="@{/pesquisa/listarResposta(id=${ps.id})}">Lista de Respostas</a></td>
 
 	</tr>
