Botão de retornar e Correção de texto

--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../static/css/erro/erro500.css" />
-    <title>Erro 500</title>
-  </head>
-  <body>
-    <h1>4</h1>
-    <h1>03</h1>
-    <div class="box">
-      <span></span><span></span> <span></span><span></span>
-      <span></span>
-    </div>
-    <div class="box">
-      <span></span><span></span> <span></span><span></span>
-      <span></span>
-    </div>
-    <p>
-      Erro 403 você não tem permissão de acessar essa pagina
-    </p>
-  </body>
+<head>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="stylesheet" href="../../static/css/erro/erro500.css" />
+<title>Erro 403</title>
+</head>
+<body>
+	<h1>4</h1>
+	<h1>03</h1>
+	<div class="box">
+		<span></span><span></span> <span></span><span></span> <span></span>
+	</div>
+	<div class="box">
+		<span></span><span></span> <span></span><span></span> <span></span>
+	</div>
+	<p>
+		A você não tem acesso a está página, verifique a url ou retorne a<a
+			class="link" onclick="volta()"> página anterior</a>
+	</p>
+	<script src="../../js/erro/erro404.js">
+		
+	</script>
+</body>
 </html>
